# panschema

./: .gitattributes  .gitignore  .mutants.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  WHY.md  deny.toml
.agent/workflows/: tdd-feature-implementation.md
.cargo/: config.toml  mutants.toml
.github/: dependabot.yml
.github/workflows/: advisory-monitor.yml  dependabot-auto-merge.yml  dogfood-release-monitor.yml  release.yml  security.yml  test.yml
docs/: ROADMAP.md  components.md  guide-consumer.md  guide-producer.md  linkml-coverage.md  mutation-debt.md  viz-frictions.md
docs/adr/: 001-core-architecture.md  002-crate-selection.md  003-linkml-as-internal-representation.md  004-reader-writer-architecture.md  005-graph-visualization-conventions.md  006-slot-terminology.md  007-mdbook-panschema-plugin.md  008-instance-data-reader-architecture.md  009-instance-graph-publishing-and-addressing.md
docs/design/: feat-1-slice-4-layout.md
docs/features/: 01-foundational-ui-stack.md  02-core-ontology-documentation.md  03-reader-writer-architecture.md  04-schema-force-graph-visualization.md  05-schema-manager.md  06-rust-codegen.md  07-schema-validation.md  08-bootstrap-linkml-ir.md  09-graph-layout-selection.md  10-authoring-experience.md  11-versioned-docs-publish.md  12-linkml-ir-resolver-services.md  13-upstream-label-cache.md  14-slot-constraints.md  15-multi-file-schema-modularity.md  16-lifecycle-editorial-metadata.md  17-class-validation-constructs.md  18-exemplar-individuals-in-graph.md  19-ifabsent-slot-defaults.md  20-dogfood-schema-regression-fixtures.md  21-book-to-schema-link.md  22-unsupported-construct-diagnostics.md  23-cross-writer-construct-coverage-diagnostics.md  24-postgres-ddl-writer.md  25-rust-writer-output-verification.md  26-html-graph-viz-output-verification.md  (+11 more)
examples/: preview.rs
mdbook-panschema/: Cargo.toml
mdbook-panschema/assets/: schema-link.css  schema-link.js
mdbook-panschema/src/: lib.rs  main.rs
panschema/: Cargo.toml  build.rs
panschema-viz/: Cargo.toml
panschema-viz/.cargo/: config.toml
panschema-viz/src/: camera.rs  camera3d.rs  canvas2d.rs  graph_types.rs  interaction.rs  labels.rs  layout.rs  lib.rs  sim_common.rs  simulation.rs  simulation3d.rs  webgpu.rs
panschema/src/: cache.rs  casing.rs  components.rs  diagnostics.rs  graph_writer.rs  html_writer.rs  import_resolve.rs  instances.rs  io.rs  json_schema_writer.rs  labels.rs  lib.rs  linkml.rs  linkml_resolve.rs  lockfile.rs  main.rs  manifest.rs  openapi_writer.rs  owl_model.rs  owl_reader.rs  owl_writer.rs  postgres_writer.rs  primitives.rs  publish.rs  rdf_serializers.rs  rules.rs  rust_writer.rs  server.rs  shacl_writer.rs  source.rs  validate.rs  yaml_reader.rs
panschema/src/gpu/: mod.rs  renderer.rs  simulation.rs
panschema/src/snapshots/: panschema__components__tests__snapshots__snapshot_class_card_abstract_variant.snap  panschema__components__tests__snapshots__snapshot_class_card_full.snap  panschema__components__tests__snapshots__snapshot_class_card_minimal.snap  panschema__components__tests__snapshots__snapshot_enum_card_full.snap  panschema__components__tests__snapshots__snapshot_footer.snap  panschema__components__tests__snapshots__snapshot_header.snap  panschema__components__tests__snapshots__snapshot_hero_with_comment.snap  panschema__components__tests__snapshots__snapshot_individual_card_full.snap  panschema__components__tests__snapshots__snapshot_metadata_card_full.snap  panschema__components__tests__snapshots__snapshot_metadata_card_minimal.snap  panschema__components__tests__snapshots__snapshot_namespace_table.snap  panschema__components__tests__snapshots__snapshot_property_card_data_property.snap  panschema__components__tests__snapshots__snapshot_property_card_minimal.snap  panschema__components__tests__snapshots__snapshot_property_card_object_property.snap  panschema__components__tests__snapshots__snapshot_section_header_minimal.snap  panschema__components__tests__snapshots__snapshot_sidebar_empty.snap  panschema__components__tests__snapshots__snapshot_sidebar_with_items.snap  panschema__components__tests__snapshots__snapshot_slot_card_data_property.snap  panschema__components__tests__snapshots__snapshot_slot_card_minimal.snap  panschema__components__tests__snapshots__snapshot_slot_card_object_property.snap  panschema__components__tests__snapshots__snapshot_type_card_full.snap
panschema/templates/: base.html  index.html  layout.html  styleguide.html
panschema/templates/components/: class_card.html  enum_card.html  graph_viz.html  header.html  hero.html  individual_card.html  instance_graph.html  metadata_card.html  namespace_table.html  property_card.html  section_header.html  sidebar.html  slot_card.html  type_card.html
panschema/tests/: e2e.rs  integration.rs  rust_writer.rs
panschema/tests/fixtures/: card_features.yaml  class_card_dogfood.yaml  codegen.yaml  enum_type.yaml  external_grounding.yaml  instance_graph.ttl  reference.ttl  rules_graph.yaml  sample_schema.yaml  taxonomy.ttl  wine_catalog.yaml  wine_instances.yaml  wine_instances_dangling.yaml
panschema/tests/fixtures/dogfood/scimantic-schema/: v0.1.0.yaml  v0.2.0.yaml
panschema/tests/fixtures/imports/: app.yaml  common.yaml  conflict_one.yaml  conflict_root.yaml  conflict_two.yaml  cycle_a.yaml  cycle_b.yaml  diamond_a.yaml  diamond_b.yaml  diamond_c.yaml  diamond_d.yaml  identical_one.yaml  identical_root.yaml  identical_two.yaml  tcycle_a.yaml  tcycle_b.yaml  tcycle_c.yaml
panschema/tests/fixtures/local-pkg/: panschema-publish.toml
panschema/tests/integration/: dogfood.rs  main.rs  rust_writer.rs
scripts/: dev-install.sh  mutants.sh  preview.sh  vendor-dogfood-schemas.sh
src/: cli.rs  components.rs  extractor.rs  generator.rs  html_writer.rs  io.rs  lib.rs  linkml.rs  main.rs  model.rs  owl_reader.rs  owl_writer.rs  parser.rs  renderer.rs  server.rs
src/gpu/: camera.rs  (+7 more)
supply-chain/: audits.toml  config.toml
templates/: base.html  index.html  layout.html  styleguide.html
tests/: e2e.rs  e2e_generation.rs  integration.rs
(+44 files in other folders)
