[workspace]
members = ["panschema", "panschema-viz"]
resolver = "2"

# Shared profile settings
[profile.release]
lto = true
strip = true

# WASM-optimized profile (applied to all release builds)
# For panschema-viz, wasm-pack uses --release which picks this up
[profile.release.package.panschema-viz]
opt-level = "s"  # Optimize for size
