[package]
name = "panschema-viz"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "WebGPU visualization for panschema schema graphs"
license = "Apache-2.0"
repository = "https://github.com/padamson/panschema"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable WebGPU acceleration (requires wgpu)
webgpu = ["dep:wgpu", "dep:bytemuck"]

[dependencies]
# WASM-specific
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Navigator",
    "HtmlCanvasElement", "CanvasRenderingContext2d",
    "TextMetrics",
    "console",
] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Graph layout (egraph-rs workspace, git-only — sub-crates not on
# crates.io). Pinned to our padamson/egraph-rs fork that ports the
# workspace to petgraph 0.8. Upstream `likr/egraph-rs` is still on
# petgraph 0.6; the fork-based pin unblocks petgraph 0.8 across our
# direct deps. Repin to upstream once our PR lands there (see the
# `egraph-rs--petgraph-0.8-fork` cross-repo note for the close-out
# trigger).
petgraph = "0.8"
petgraph-drawing = { version = "0.1", git = "https://github.com/padamson/egraph-rs", rev = "e2aee8fea7878d2574ad8dececc7000c3801c738" }
petgraph-layout-kamada-kawai = { version = "0.1", git = "https://github.com/padamson/egraph-rs", rev = "e2aee8fea7878d2574ad8dececc7000c3801c738" }
petgraph-layout-stress-majorization = { version = "0.1", git = "https://github.com/padamson/egraph-rs", rev = "e2aee8fea7878d2574ad8dececc7000c3801c738" }
petgraph-layout-sgd = { version = "0.1", git = "https://github.com/padamson/egraph-rs", rev = "e2aee8fea7878d2574ad8dececc7000c3801c738" }
# Matches the rand version petgraph-layout-sgd depends on. Used to
# seed the SGD scheduler's shuffle step.
rand = "0.8"
# Wasm32 needs the `js` feature on getrandom (transitive dep of rand)
# so rand's StdRng can source entropy from `crypto.getRandomValues`.
# We also seed deterministically via `SeedableRng::seed_from_u64` in
# the SGD path itself, so this is mostly about getting rand to
# compile cleanly for the wasm32-unknown-unknown target.
getrandom = { version = "0.2", features = ["js"] }
# Empty no-op crate providing `#[mutants::skip]` so we can mark
# provably/empirically-equivalent expressions without resorting to
# brittle line-number based excludes in scripts/mutants.sh.
mutants = "0.0.4"
# Sugiyama for layered/hierarchical layout. Now on petgraph 0.8 too
# (post-fork), so we no longer carry both petgraph 0.6 and 0.8 in the
# lock file.
rust-sugiyama = "0.4"

# WebGPU (optional, only with webgpu feature)
wgpu = { version = "29", features = ["webgpu"], optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

# Profile settings are in workspace root Cargo.toml
