[package]
name = "panschema-viz"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "WebGPU visualization for panschema schema graphs"
license = "Apache-2.0"
repository = "https://github.com/padamson/panschema"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable WebGPU acceleration (requires wgpu)
webgpu = ["dep:wgpu", "dep:bytemuck"]

[dependencies]
# WASM-specific
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Navigator",
    "HtmlCanvasElement", "CanvasRenderingContext2d",
    "TextMetrics",
    "console",
] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Graph layout (egraph-rs workspace, git-only — sub-crates not on
# crates.io). Pinned to our padamson/egraph-rs fork that ports the
# workspace to petgraph 0.8 and rand 0.9. Upstream `likr/egraph-rs`
# is still on petgraph 0.6; the fork-based pin unblocks both bumps
# across our direct deps. Repin to upstream once our PRs land there.
petgraph = "0.8"
petgraph-drawing = { version = "0.1", git = "https://github.com/padamson/egraph-rs", rev = "c149ba911802ad699577a115841e4a73ed2c2835" }
petgraph-layout-kamada-kawai = { version = "0.1", git = "https://github.com/padamson/egraph-rs", rev = "c149ba911802ad699577a115841e4a73ed2c2835" }
petgraph-layout-stress-majorization = { version = "0.1", git = "https://github.com/padamson/egraph-rs", rev = "c149ba911802ad699577a115841e4a73ed2c2835" }
petgraph-layout-sgd = { version = "0.1", git = "https://github.com/padamson/egraph-rs", rev = "c149ba911802ad699577a115841e4a73ed2c2835" }
# Matches the rand version petgraph-layout-sgd depends on. Used to
# seed the SGD scheduler's shuffle step.
rand = "0.10"
# Wasm32 needs the `wasm_js` backend on getrandom 0.3 (transitive dep
# of rand 0.9) so the SGD path's deterministic `StdRng::seed_from_u64`
# compiles cleanly for the wasm32-unknown-unknown target. The cfg
# flag selecting the backend lives in `.cargo/config.toml` alongside
# this manifest — both pieces are required together.
getrandom = { version = "0.3", features = ["wasm_js"] }
# Empty no-op crate providing `#[mutants::skip]` so we can mark
# provably/empirically-equivalent expressions without resorting to
# brittle line-number based excludes in scripts/mutants.sh.
mutants = "0.0.4"
# Sugiyama for layered/hierarchical layout. Now on petgraph 0.8 too
# (post-fork), so we no longer carry both petgraph 0.6 and 0.8 in the
# lock file.
rust-sugiyama = "0.4"

# WebGPU (optional, only with webgpu feature)
wgpu = { version = "29", features = ["webgpu"], optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

# Profile settings are in workspace root Cargo.toml
