[package]
name = "panschema"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
authors = ["Paul Adamson"]
description = "A universal CLI for schema conversion, documentation, validation, and comparison"
license = "Apache-2.0"
repository = "https://github.com/padamson/panschema"
keywords = ["ontology", "owl", "rdf", "linkml", "documentation"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# RDF/OWL parsing and serialization
sophia = { version = "0.9", features = ["jsonld", "xml"] }

# Templating
askama = "0.16"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = "1"
sha2 = "0.10"
toml = "1.1"
toml_edit = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
notify = "8"
tower-http = { version = "0.6", features = ["fs"] }
tower-livereload = "0.10"

# Schema manager — github: source fetch + cache
ureq = { version = "2", default-features = false, features = ["tls"] }
flate2 = "1"
tar = "0.4"
directories = "5"
fs2 = "0.4"

# GPU force simulation (optional)
wgpu = { version = "29", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

[features]
# Enable development tools (styleguide command, component preview)
dev = []
# GPU-accelerated force simulation for graph visualization
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]
# Expose schema-manager test fixtures (e.g. tarball builder) to integration tests.
# Not a runtime feature — kept off by default; integration tests opt in.
test-fixtures = []

[dev-dependencies]
# Snapshot testing
insta = "1"

# Syntactic validation of RustWriter output without paying the cost of a
# full `cargo build`. Parses generated source as a Rust file — catches
# syntax errors in the writer but ignores semantic issues (undefined
# types, missing imports). End-to-end compile checks against real
# downstream consumers cover the semantic class of errors.
syn = { version = "2", features = ["full"] }

# E2E browser testing — pulled from main of the upstream repo (authored by
# the same maintainer) for active dogfood. Cargo.lock pins the resolved
# commit; `cargo update -p playwright-rs` rolls forward.
playwright-rs = { git = "https://github.com/padamson/playwright-rust" }
tempfile = "3.24.0"

# Profile settings are in workspace root Cargo.toml
