[package]
name = "panschema"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
authors = ["Paul Adamson"]
description = "A universal CLI for schema conversion, documentation, validation, and comparison"
license = "Apache-2.0"
repository = "https://github.com/padamson/panschema"
keywords = ["ontology", "owl", "rdf", "linkml", "documentation"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# RDF/OWL parsing and serialization
sophia = { version = "0.10", features = ["jsonld", "xml"] }

# Templating
askama = "0.16"

# Markdown rendering inside LinkML `description:` fields. CommonMark
# only; raw HTML inside descriptions is escaped (Event::Html /
# Event::InlineHtml are routed through text escaping at render time).
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = "1"
sha2 = "0.11"
toml = "1"
toml_edit = "0.25"
hex = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev server
axum = "0.8"
tokio = { version = "1", features = ["full"] }
notify = "8"
tower-http = { version = "0.7", features = ["fs"] }
tower-livereload = "0.10"

# Schema manager — github: source fetch + cache
ureq = { version = "2", default-features = false, features = ["tls"] }
flate2 = "1"
tar = "0.4"
directories = "6"
fs2 = "0.4"

# Versioned-publish — `git show <ref>:<path>` output lands in a temp
# file managed via NamedTempFile (auto-unlinked on drop).
tempfile = "3.24.0"

# Empty no-op crate providing `#[mutants::skip]`. Used to suppress
# specific mutation-test mutations on inline-equivalent expressions
# where the cleanest skip is a tiny helper function rather than a
# brittle line-number exclude in scripts/mutants.sh.
mutants = "0.0.4"

# GPU force simulation (optional)
wgpu = { version = "30", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

[features]
# Enable development tools (styleguide command, component preview)
dev = []
# GPU-accelerated force simulation for graph visualization
gpu = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]
# Expose schema-manager test fixtures (e.g. tarball builder) to integration tests.
# Not a runtime feature — kept off by default; integration tests opt in.
test-fixtures = []

[dev-dependencies]
# Snapshot testing
insta = "1"

# Syntactic validation of RustWriter output without paying the cost of a
# full `cargo build`. Parses generated source as a Rust file — catches
# syntax errors in the writer but ignores semantic issues (undefined
# types, missing imports). End-to-end compile checks against real
# downstream consumers cover the semantic class of errors.
syn = { version = "2", features = ["full"] }

# Syntactic validation of PostgresWriter output: a Rust binding to
# `libpg_query`, Postgres's own C parser extracted as a standalone
# library. Real-Postgres-oracle syntax checking with no running database;
# a real-Postgres apply/constraint-enforcement tier is not yet built.
pg_query = "6"

# E2E browser testing. The npm-pinned Playwright version in
# `.github/workflows/{test,security}.yml` and `.pre-commit-config.yaml`
# must match `playwright_rs::PLAYWRIGHT_VERSION` exactly — wire-protocol
# mismatches silently break the harness.
playwright-rs = "0.14"

# Spec-conformance validation of HtmlWriter output: the same HTML5 parser
# Servo/Firefox use. A real browser silently repairs malformed markup, so
# "renders correctly in Chromium" (the existing Playwright E2E tier)
# doesn't prove spec validity — this catches what that tier can't.
html5ever = "0.39.0"
markup5ever_rcdom = "0.39.0"

# Independent RDF oracle for the RDF/OWL writer family: loads generated
# TTL into a real, separate triple store and runs SPARQL sanity queries,
# catching graph-level mistakes sophia's serializer wouldn't (it
# guarantees syntax, not graph sanity). `default-features = false` drops
# the `rocksdb` feature (a C++ build we don't need) — only the in-memory
# `Store` is used here.
#
# `features = ["rdf-12"]` is required, not optional: `sophia_xml` (used
# by the RDF/XML writer) depends on `oxrdf` with its own `rdf-12` feature
# on, and Cargo unifies features across the whole build — so `oxrdf`'s
# `Term::Triple` variant is compiled in project-wide regardless of what
# oxigraph itself requests. Oxigraph's own sub-crates (built assuming
# `rdf-12` is off) don't exhaustively match that variant, so the build
# fails unless oxigraph also opts into `rdf-12`, pulling in the sub-crate
# versions that do handle it. Don't drop this feature without confirming
# `sophia_xml`'s `oxrdf` requirement no longer forces it on.
oxigraph = { version = "0.5.9", default-features = false, features = ["rdf-12"] }

# Real-Postgres apply oracle for PostgresWriter: spins up a disposable
# Postgres container and applies generated DDL against it, catching
# semantic errors `pg_query` syntax checking can't (e.g. an FK
# referencing a column that doesn't actually exist). Gated `#[ignore]`
# locally (Docker startup cost); runs in CI via a dedicated job.
testcontainers-modules = { version = "0.15", features = ["postgres", "blocking"] }
postgres = "0.19"

# Profile settings are in workspace root Cargo.toml
